# lab_template

./: .cspell.json  .dockerignore  .editorconfig  .gitignore  .lintstagedrc.json  .versionrc.json  LICENSE  Makefile  README.md  changelog.config.js  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  devcontainer.json.bak
.github/: contributing.md
.github/workflows/: ruff.yml
docker/python/3.10/: Dockerfile  pyproject.toml
docker/python/3.11/: Dockerfile  pyproject.toml
docker/python/3.12/: Dockerfile  pyproject.toml
docker/python/3.9/: Dockerfile  pyproject.toml
notebooks/: main.ipynb
src/: main.py
thesis/: thesis.md
tutrial/step1/: main.ipynb
tutrial/step2/: main.ipynb
tutrial/step3/: main.ipynb
tutrial/step4/: main.ipynb
tutrial/step5/: main.ipynb
tutrial/step6/: main.ipynb
tutrial/step7/: main.ipynb
tutrial/step8/: main.ipynb
tutrial/はじめに/: first.ipynb
